--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <button class="trafficlight" type="button" name="button" data-light-id="0" data-light-action="off">All off</button>
                 <button class="trafficlight" type="button" name="button" data-light-id="1" data-light-action="both">Toggle trafficlight</button>
             </div>
+            <div class="button-box">
+                <button class="trafficlight trafficlight--process" type="button" name="button" data-light-id="1" data-light-action="both">Build Process</button>
+            </div>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="dist/js/app.js" charset="utf-8"></script>
